vivado/new214/proj_extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:1:
extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:219:9: error: expected identifier or '('
  int (*)[8] bits;
        ^
extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:220:32: error: use of undeclared identifier 'bits'
  ff_sbc_calculate_bits(frame, bits);
                               ^
2 errors generated.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/aut/proj_extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main.c'.
INFO: [HLS 200-10] Adding design file 'extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main.c' to the project
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/aut/proj_extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main.c/solution1'.
